trunk/Archive2/1a/286c8fd9e68275/output
main.cpp:5:5: error: stray '\' in program
     std::string quoted = R(""Foo said, \"bar\"\n"");
     ^
main.cpp:5:50: warning: missing terminating " character
     std::string quoted = R(""Foo said, \"bar\"\n"");
                                                  ^
main.cpp:5:5: error: missing terminating " character
     std::string quoted = R(""Foo said, \"bar\"\n"");
     ^
main.cpp: In function 'int main()':
main.cpp:5:28: error: unable to find string literal operator 'operator""Foo'
     std::string quoted = R(""Foo said, \"bar\"\n"");
                            ^
main.cpp:6:1: error: expected ')' before '}' token
 }
 ^
main.cpp:6:1: error: expected ',' or ';' before '}' token
